avaloq-acpr/src/constellations/avaloq-acpr-monitoring/extensions/avaloq-acpr-monitoring/avaloq-kube-state-metrics/avaloq-kube-state-metrics-kubernetes.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-state-metrics
  labels:
    app.kubernetes.io/component: monitoring
    avaloq.com/app: kube-state-metrics
    avaloq.com/zone: core-internal
spec:
  selector:
    matchLabels:
      avaloq.com/app: kube-state-metrics
  replicas: ${AVALOQ_KUBE_STATE_METRICS_REPLICAS}
  template:
    metadata:
      annotations:
        prometheus.io/port: '8080'
        prometheus.io/scheme: http
        prometheus.io/scrape: 'true'
      labels:
        app.kubernetes.io/component: monitoring
        avaloq.com/app: kube-state-metrics
        avaloq.com/zone: core-internal
    spec:
      serviceAccountName: kube-state-metrics
      containers:
      - name: kube-state-metrics
        image: ${AVALOQ_REDHAT_CONTAINER_IMAGE_REGISTRY}${AVALOQ_KUBE_STATE_METRICS_CONTAINER_IMAGE}
        imagePullPolicy: ${AVALOQ_KUBE_STATE_METRICS_CONTAINER_IMAGE_PULL_POLICY}
        args:
        - --host=0.0.0.0
        - --port=8080
        - --telemetry-host=127.0.0.1
        - --telemetry-port=8081
        ports:
        - name: http-metrics
          containerPort: 8080
        - name: telemetry
          containerPort: 8081
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 5
        resources:
          limits:
            cpu: ${AVALOQ_KUBE_STATE_METRICS_RESOURCES_LIMIT_CPU}
            memory: ${AVALOQ_KUBE_STATE_METRICS_RESOURCES_LIMIT_MEMORY}
          requests:
            cpu: ${AVALOQ_KUBE_STATE_METRICS_RESOURCES_REQUEST_CPU}
            memory: ${AVALOQ_KUBE_STATE_METRICS_RESOURCES_REQUEST_MEMORY}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /tmp
          name: volume-directive-shadow
      volumes:
      - emptyDir: {}
        name: volume-directive-shadow
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus-kubestatemetrics
  labels:
    avaloq.com/app: kube-state-metrics
    app.kubernetes.io/component: monitoring
spec:
  ingress:
  - ports:
    - port: 8080
      protocol: TCP
    from:
    - podSelector:
        matchLabels:
          avaloq.com/app: prometheus
  podSelector:
    matchLabels:
      avaloq.com/app: kube-state-metrics
---
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
  labels:
    avaloq.com/app: kube-state-metrics
    app.kubernetes.io/component: monitoring
  annotations:
    prometheus.io/scrape: 'true'
spec:
  ports:
  - name: http-metrics
    port: 8080
    targetPort: http-metrics
    protocol: TCP
  - name: telemetry
    port: 8081
    targetPort: telemetry
    protocol: TCP
  selector:
    avaloq.com/app: kube-state-metrics
